[package]
name = "ethbloom"
version = "0.1.1"
authors = ["debris <marek.kotewicz@gmail.com>"]
description = "Ethereum bloom filter"
license = "MIT"
documentation = "https://docs.rs/ethbloom"
homepage = "https://github.com/debris/ethbloom"
repository = "https://github.com/debris/ethbloom"

[dependencies]
tiny-keccak = "1.3"
rustc-hex = "1.0"
