[package]
name = "ethbloom"
version = "0.2.6"
authors = ["debris <marek.kotewicz@gmail.com>"]
description = "Ethereum bloom filter"
license = "MIT"
documentation = "https://docs.rs/ethbloom"
homepage = "https://github.com/debris/ethbloom"
repository = "https://github.com/debris/ethbloom"

[dependencies]
tiny-keccak = "1.4"
rustc-hex = "1.0"
heapsize = { version = "0.4", optional = true }
crunchy = { version = "0.1.6", features = ["limit_256"] }

[dev-dependencies]
rand = "0.4"

[features]
heapsizeof = ["heapsize"]
